bk_ida/gobmkida/c1/add_to_test_array
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/add_to_test_array/src/patterns/dfa.c:1203:21: error: use of undeclared identifier 'gtest'
add_to_entry_list( &gtest.hash[v8 - ( v9 & 0xFFFFF000)], v6, l, r); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/add_to_test_array/src/obj/3/dfa.o] Error 1
